Makes Roles unique. Seed the database with users and roles.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,3 +4,8 @@ spring.datasource.username=discoberdb
 spring.datasource.password=Unicidade17!/
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql=false
+
+
+discober.app.jwtCookieName= discober
+discober.app.jwtSecret= discoberSecretKey
+discober.app.jwtExpirationMs= 86400000
