--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.flyway.baselineOnMigrate = true
 
+app.jwtCookieName=discober
+app.jwtSecret=discoberSecretKey
+app.jwtExpirationMs=86400000
